--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./src:/var/www/html/public
+      - ./src:/var/www/html
     depends_on:
       - mysql
       - php
